2009-12-10  Atsushi Enomoto  <atsushi@ximian.com>

	* OperationInvokerHandler.cs : fix async operation handling. Since
	  the entire handler chain is designed to be in synchronous, one
	  single handler must not leave its work incomplete (async). Just
	  wait for the async process completion within the handler.

2009-12-07  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelDispatcher.cs : fix regression; ServiceBehaviorAttribute
	  could be set explicitly null.

2009-12-07  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelDispatcher.cs : handle AddressFilterMode (.Any only yet).
	* OperationInvokerHandler.cs : fix wrong IAsyncResult use.

2009-12-07  Atsushi Enomoto  <atsushi@ximian.com>

	* InstanceBehavior.cs : allow nonpublic instance.
	* DefaultOperationInvoker.cs : do use IsSynchronous correctly.

2009-10-22  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelDispatcher.cs : disable concurrent channel acceptance
	  until it gets working fine.

2009-10-16  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelDispatcher.cs : fix warnings.

2009-10-16  Atsushi Enomoto  <atsushi@ximian.com>

	* ClientOperation.cs, ClientRuntime.cs : another couple of changes
	  are required to not use non-SL types.

2009-10-16  Atsushi Enomoto  <atsushi@ximian.com>

	* ClientRuntime.cs : enable Operations property on monotouch.
	  Hopefully it will enable us to build WebHttpBinding.

2009-10-09  Atsushi Enomoto  <atsushi@ximian.com>

	 * ChannelDispatcher.cs : OnOpened/OnOpening constraints related
	   changes were required here too. Actually it simplified code.

2009-10-06  Atsushi Enomoto  <atsushi@ximian.com>

	* OperationInvokerHandler.cs : a bit more explaining message.

2009-10-05  Atsushi Enomoto  <atsushi@ximian.com>

	* ChannelDispatcher.cs : make sure to close, *and* abort channels
	  in case they failed to close. Also consider close timeouts.
	  Rename a field to make less confusing.

2009-09-17  Atsushi Enomoto  <atsushi@ximian.com>
